--- a/CarParkingMultiplayer2.html
+++ b/CarParkingMultiplayer2.html
@@ -564,6 +564,16 @@
             </a>
         </div>
 
+        <div class="service-card">   
+            <img src="stock livery cpm2.png" alt="Coin Car/Mobil Koin">
+            <h2>Car Coin/Mobil Koin + Stock Livery</h2>
+            <p>Harga Rp 10.000,- Rupiah/Mobil</p>
+            <p class="note">Screenshoot Stock livery yang di pilih saat melakukan pemesanan</p>
+            <a href="order.html?service=Car%20Coin/Mobil%20Koin%20+%20Stock%20Livery%20Cpm2">
+                <button>Pesan</button>
+            </a>
+        </div>
+
         <div class="service-card">
             <img src="bodykit cpm2.png" alt="Coin Car/Mobil Koin + Bodykit">
             <h2>Coin Car/Mobil Koin + Bodykit</h2>
@@ -584,7 +594,7 @@
         </div>
 
         <div class="service-card">
-            <img src="Error.png" alt="Coin Car/Mobil Koin + Caliper/Brakes">
+            <img src="caliper brake cpm2.png" alt="Coin Car/Mobil Koin + Caliper/Brakes">
             <h2>Coin Car/Mobil Koin + Caliper/Brakes</h2>
             <p>Harga Rp 7.000,- Rupiah/Mobil</p>
             <p class="note">Pilih Salah Satu Caliper/Brakes</p>
