--- a/CarParkingMultiplayer.html
+++ b/CarParkingMultiplayer.html
@@ -546,9 +546,9 @@
         <!-- Daftar Layanan -->
         <div class="service-card">
             <h2>Car Parking Multiplayer</h2>
-            <img src="20240911_122112_0000.png" alt="Tune Up">
+            <img src="20240911_122112_0000.png" alt="Tune Up On Turbo">
             <h2>Tune Up</h2>
-            <p>Harga Rp 2.000,- Rupiah/Mobil (3 Mobil Rp 5.000,-)</p>
+            <p>Harga Rp 2.000,- Rupiah/Mobil </p>
             <a href="order.html?service=Tune%20Up">
                 <button>Pesan</button>
             </a>
@@ -557,16 +557,16 @@
         <div class="service-card">
             <img src="20240911_122314_0000.png" alt="Tune Up Suara Asli/ECU">
             <h2>Tune Up Suara Asli/ECU</h2>
-            <p>Harga Rp 3.000,- Rupiah/Mobil (3 Mobil Rp 8.000,-)</p>
+            <p>Harga Rp 3.000,- Rupiah/Mobil </p>
             <a href="order.html?service=Tune%20Up%20Suara%20Asli/ECU">
                 <button>Pesan</button>
             </a>
         </div>
 
         <div class="service-card">
-            <img src="20240911_122413_0000.png" alt="FFA">
+            <img src="20240911_122413_0000.png" alt="FFA On Turbo">
             <h2>FFA</h2>
-            <p>Harga Rp 2.000,- Rupiah/Mobil (3 Mobil Rp 5.000,-)</p>
+            <p>Harga Rp 2.000,- Rupiah/Mobil</p>
             <a href="order.html?service=FFA">
                 <button>Pesan</button>
             </a>
@@ -575,16 +575,16 @@
         <div class="service-card">
             <img src="20240911_122501_0000.png" alt="FFA Suara Asli/ECU">
             <h2>FFA Suara Asli/ECU</h2>
-            <p>Harga Rp 3.000,- Rupiah/Mobil (3 Mobil Rp 8.000,-)</p>
+            <p>Harga Rp 3.000,- Rupiah/Mobil</p>
             <a href="order.html?service=FFA%20Suara%20Asli/ECU">
                 <button>Pesan</button>
             </a>
         </div>
 
         <div class="service-card">
-            <img src="20240911_122520_0000.png" alt="Glitch">
+            <img src="20240911_122520_0000.png" alt="Glitch On Turbo">
             <h2>Glitch</h2>
-            <p>Harga Rp 2.000,- Rupiah/Mobil (3 Mobil Rp 5.000,-)</p>
+            <p>Harga Rp 2.000,- Rupiah/Mobil</p>
             <a href="order.html?service=Glitch">
                 <button>Pesan</button>
             </a>
@@ -593,7 +593,7 @@
         <div class="service-card">
             <img src="20240911_122545_0000.png" alt="Glitch Suara Asli/ECU">
             <h2>Glitch Suara Asli/ECU</h2>
-            <p>Harga Rp 3.000,- Rupiah/Mobil (3 Mobil Rp 8.000,-)</p>
+            <p>Harga Rp 3.000,- Rupiah/Mobil</p>
             <a href="order.html?service=Glitch%20Suara%20Asli/ECU">
                 <button>Pesan</button>
             </a>
@@ -602,7 +602,7 @@
         <div class="service-card">
             <img src="20240911_122655_0000.png" alt="Chrome/Bakar Body/Velg">
             <h2>Chrome/Bakar Body/Velg</h2>
-            <p>Harga Rp 2.000,- Rupiah/Mobil (3 Mobil Rp 5.000,-)</p>
+            <p>Harga Rp 2.000,- Rupiah/Mobil </p>
             <a href="order.html?service=Chrome/Bakar%20Body/Velg">
                 <button>Pesan</button>
             </a>
@@ -610,7 +610,7 @@
         <div class="service-card">
             <img src="20240911_122743_0000.png" alt="Custom Spoiler/Trondol">
             <h2>Custom Spoiler/Trondol</h2>
-            <p>Harga Rp 2.000,- Rupiah/Mobil (3 Mobil Rp 5.000,-)</p>
+            <p>Harga Rp 2.000,- Rupiah/Mobil </p>
             <a href="order.html?service=Custom%20Spoiler/Trondol">
                 <button>Pesan</button>
             </a>
@@ -619,7 +619,7 @@
         <div class="service-card">
             <img src="20240911_122808_0000.png" alt="Alis nyala/Kaliper">
             <h2>Alis nyala/Kaliper</h2>
-            <p>Harga Rp 2.000,- Rupiah/Mobil (3 Mobil Rp 5.000,-)</p>
+            <p>Harga Rp 2.000,- Rupiah/Mobil</p>
             <a href="order.html?service=Alis%20nyala/Kaliper">
                 <button>Pesan</button>
             </a>
