--- a/CarParkingMultiplayer.html
+++ b/CarParkingMultiplayer.html
@@ -546,9 +546,9 @@
         <!-- Daftar Layanan -->
         <div class="service-card">
             <h2>Car Parking Multiplayer</h2>
-            <img src="20240911_122112_0000.png" alt="Tune Up On Turbo">
+            <img src="20240911_122112_0000.png" alt="Tune Up">
             <h2>Tune Up</h2>
-            <p>Harga Rp 2.000,- Rupiah/Mobil </p>
+            <p>Harga Rp 2.000,- Rupiah/Mobil</p>
             <a href="order.html?service=Tune%20Up">
                 <button>Pesan</button>
             </a>
@@ -557,14 +557,14 @@
         <div class="service-card">
             <img src="20240911_122314_0000.png" alt="Tune Up Suara Asli/ECU">
             <h2>Tune Up Suara Asli/ECU</h2>
-            <p>Harga Rp 3.000,- Rupiah/Mobil </p>
+            <p>Harga Rp 3.000,- Rupiah/Mobil</p>
             <a href="order.html?service=Tune%20Up%20Suara%20Asli/ECU">
                 <button>Pesan</button>
             </a>
         </div>
 
         <div class="service-card">
-            <img src="20240911_122413_0000.png" alt="FFA On Turbo">
+            <img src="20240911_122413_0000.png" alt="FFA">
             <h2>FFA</h2>
             <p>Harga Rp 2.000,- Rupiah/Mobil</p>
             <a href="order.html?service=FFA">
@@ -582,7 +582,7 @@
         </div>
 
         <div class="service-card">
-            <img src="20240911_122520_0000.png" alt="Glitch On Turbo">
+            <img src="20240911_122520_0000.png" alt="Glitch">
             <h2>Glitch</h2>
             <p>Harga Rp 2.000,- Rupiah/Mobil</p>
             <a href="order.html?service=Glitch">
@@ -602,7 +602,7 @@
         <div class="service-card">
             <img src="20240911_122655_0000.png" alt="Chrome/Bakar Body/Velg">
             <h2>Chrome/Bakar Body/Velg</h2>
-            <p>Harga Rp 2.000,- Rupiah/Mobil </p>
+            <p>Harga Rp 2.000,- Rupiah/Mobil</p>
             <a href="order.html?service=Chrome/Bakar%20Body/Velg">
                 <button>Pesan</button>
             </a>
@@ -610,7 +610,7 @@
         <div class="service-card">
             <img src="20240911_122743_0000.png" alt="Custom Spoiler/Trondol">
             <h2>Custom Spoiler/Trondol</h2>
-            <p>Harga Rp 2.000,- Rupiah/Mobil </p>
+            <p>Harga Rp 2.000,- Rupiah/Mobil</p>
             <a href="order.html?service=Custom%20Spoiler/Trondol">
                 <button>Pesan</button>
             </a>
@@ -660,16 +660,6 @@
             <p>Unlock Fitur, Uang Game Full, Bebas Request Coin diisi berapa dan Custom ID - Rp 30.000,- (Akun Baru/Akun Lama)</p>
             <p class="note">NOTE : Wajib Pilih Metode Login Akun</p>
             <a href="order.html?service=Paket%20Akun%20King">
-                <button>Pesan</button>
-            </a>
-        </div>
-        
-        <div class="service-card">
-            <img src="20240911_125220_0000.png" alt="Costum ID">
-            <h2>Custom ID</h2>
-            <p>Bebas Request Custom ID - Rp 10.000,- (Akun Baru/Akun Lama)</p>
-            <p class="note">NOTE : Wajib Pilih Metode Login Akun</p>
-            <a href="order.html?service=Coatum%20ID">
                 <button>Pesan</button>
             </a>
         </div>
