--- a/index.html
+++ b/index.html
@@ -352,8 +352,9 @@
                 <li class="dropdown">
                     <a href="#">Service</a>
                     <ul class="dropdown-menu">
-                        <li><a href="FrLegends.html">Fr Legends</a></li>
                         <li><a href="CarParkingMultiplayer.html">Car Parking Multiplayer</a></li>
+                        <li><a href="SosialMedia.html">Layanan Sosial Media</a></li>
+                        <li><a href="designedit.html">Design/Edit Foto</a></li>
                     </ul>
                 </li>
                 <li><a href="https://wa.me/6289687163314" target="_blank">Contact</a></li>
@@ -382,8 +383,9 @@
         <h1>Akino Store</h1>
         <p>Pilihan Jasa Terbaik untuk Kebutuhan Anda</p>
         <div class="button-container">
-            <a href="FrLegends.html" class="button">Fr Legends</a>
             <a href="CarParkingMultiplayer.html" class="button">Car Parking Multiplayer</a>
+            <a href="SosialMedia.html" class="button">Layanan Sosial Media</a>
+            <a href="designedit.html" class="button">Design/Edit Foto</a>
         </div>
         <div class="social-media">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
