--- a/order2.html
+++ b/order2.html
@@ -224,9 +224,9 @@
                 <li class="dropdown">
                     <a href="#">Service</a>
                     <ul class="dropdown-menu">
-                        <li><a href="index2.html">Fr Legends</a></li>
-                        <li><a href="index1.html">Car Parking Multiplayer</a></li>
-                        <li><a href="index3.html">Layanan Sosial Media</a></li>
+                        <li><a href="CarParkingMultiplayer.html">Car Parking Multiplayer</a></li>
+                        <li><a href="SosialMedia.html">Layanan Sosial Media</a></li>
+                        <li><a href="designedit.html">Design/Edit Foto</a></li>
                     </ul>
                 </li>
                 <li><a href="https://wa.me/6289687163314" target="_blank">Contact</a></li>
@@ -336,17 +336,25 @@
                 <!-- Pilihan Layanan -->
                 <label for="service-type">Pilih Layanan:</label>
                 <select id="service-type" name="service-type">
-                    <option value="Follower">Follower</option>
+                    <option value="--Harap Pilih--">--Harap Pilih--</option>
                     <option value="View">View</option>
                     <option value="Like">Like</option>
                 </select>
 
+                 <!-- Pilihan Sosmed -->
+                 <label for="service-type">Pilih Sosial Media :</label>
+                 <select id="service-type" name="service-type">
+                    <option value="--Harap Pilih--">--Harap Pilih--</option>
+                     <option value="Follower">Tiktok</option>
+                     <option value="View">Instagram</option>
+                 </select>
+
                 <!-- Kolom Jumlah Pesanan -->
-                <label for="quantity">Jumlah Pesanan:</label>
+                <label for="quantity">Jumlah Pesanan :</label>
                 <input type="number" id="quantity" name="quantity" min="1">
 
                 <!-- Kolom Username Sosial Media -->
-                <label for="username">Username Sosial Media:</label>
+                <label for="username">Pastekan Link yang akan di Suntik :</label>
                 <input type="text" id="username" name="username">
 
                 <label for="payment">Pembayaran:</label>
