--- a/SosialMedia.html
+++ b/SosialMedia.html
@@ -455,10 +455,9 @@
                 <li class="dropdown">
                     <a href="#">Service</a>
                     <ul class="dropdown-menu">
-                        <li><a href="FrLegends.html">Fr Legends</a></li>
                         <li><a href="CarParkingMultiplayer.html">Car Parking Multiplayer</a></li>
                         <li><a href="SosialMedia.html">Layanan Sosial Media</a></li>
-                        <li><a href="DigitalInvitation.html">Web Digital Invitation</a></li>
+                        <li><a href="designedit.html">Design/Edit Foto</a></li>
                     </ul>
                 </li>
                 <li><a href="https://wa.me/62895809185015" target="_blank">Contact</a></li>
@@ -483,7 +482,6 @@
 </html>
     <header>
         <h1>Akino Store</h1>
-        <h2>Layanan Digital,Game dan Sosial Media</h2>
     </header>
 
     <div class="container">
@@ -507,56 +505,7 @@
             <h2>Selamat Datang di Akino Store!</h2>
             <p>Kami menyediakan berbagai layanan untuk meningkatkan pengalaman bermain Game dan Sosial Media Anda. Jelajahi layanan kami dan pesan sesuai kebutuhan Anda!</p>
         </div>
-        <!-- Section AkinoCh Music -->
-    <div class="music-section">
-        <h2>AkinoCh Music</h2>
-
-        <div class="video-player">
-            <iframe id="video-player" src="https://www.youtube.com/embed/Rrd8D1rdVx8" allowfullscreen></iframe>
-        </div>
-
-        <!-- Playlist Slider -->
-        <div class="slider-container">
-            <button class="slider-btn prev" onclick="slide(-1)">&#10094;</button>
-            <div class="playlist-slider" id="playlist-slider">
-                <div class="playlist-item" onclick="playVideo('Rrd8D1rdVx8')">
-                    <img src="https://img.youtube.com/vi/Rrd8D1rdVx8/0.jpg" alt="AkinoCh - Rembulan">
-                    <span>1. AkinoCh - Rembulan</span>
-                </div>
-                <div class="playlist-item" onclick="playVideo('u6v__GZ739g')">
-                    <img src="https://img.youtube.com/vi/u6v__GZ739g/0.jpg" alt="AkinoCh - Sinar Harapan">
-                    <span>2. AkinoCh - Sinar Harapan</span>
-                </div>
-                <div class="playlist-item" onclick="playVideo('LEw39rXdXm4')">
-                    <img src="https://img.youtube.com/vi/LEw39rXdXm4/0.jpg" alt="AkinoCh - Racun">
-                    <span>3. AkinoCh - Racun</span>
-                </div>
-                <div class="playlist-item" onclick="playVideo('6bRXuDMDik0')">
-                    <img src="https://img.youtube.com/vi/6bRXuDMDik0/0.jpg" alt="AkinoCh - Cahaya Mimpi">
-                    <span>4. AkinoCh - Cahaya Mimpi</span>
-                </div>
-                <div class="playlist-item" onclick="playVideo('i_UJW-pr_8Q')">
-                    <img src="https://img.youtube.com/vi/i_UJW-pr_8Q/0.jpg" alt="AkinoCh - Bayang-Bayang yang Hilang">
-                    <span>5. AkinoCh - Bayang-Bayang yang Hilang</span>
-                </div>
-            </div>
-            <button class="slider-btn next" onclick="slide(1)">&#10095;</button>
-        </div>
-    </div>
-
-    <script>
-        // Function to play selected video
-        function playVideo(videoId) {
-            const videoPlayer = document.getElementById('video-player');
-            videoPlayer.src = `https://www.youtube.com/embed/${videoId}`;
-        }
-
-        // Function to slide the playlist left or right
-        function slide(direction) {
-            const slider = document.getElementById('playlist-slider');
-            slider.scrollLeft += direction * 220; // Move by 220px (approx width of one playlist item)
-        }
-    </script>
+       
 </body>
     <header>
         <h1>Akino Store - Layanan Sosial Media</h1>
@@ -565,20 +514,11 @@
     <main>
         <!-- Layanan Sosial Media TikTok -->
         <div class="service-card">
-            <img src="Rp. 30.000_20240912_183558_0000.png" alt="Layanan Sosial Media TikTok"> <!-- Ganti dengan gambar asli -->
-            <h2>Layanan Sosial Media TikTok</h2>
-            <p class="price">Mulai dari Rp. 5.000,-</p>
-            <p class="note">Pilih layanan: Follower, View, Like</p>
-            <a href="order2.html?service=Layanan%20Sosial%20Media%20Tiktok" class="order-button">Pesan Sekarang</a>
-        </div>
-
-        <!-- Layanan Sosial Media Instagram -->
-        <div class="service-card">
-            <img src="Instagram.jpg" alt="Layanan Sosial Media Instagram"> <!-- Ganti dengan gambar asli -->
-            <h2>Layanan Sosial Media Instagram</h2>
-            <p class="price">Mulai dari Rp. 5.000,-</p>
-            <p class="note">Pilih layanan: Follower, View, Like</p>
-            <a href="order2.html?service=Layanan%20Sosial%20Media%20Instagram" class="order-button">Pesan Sekarang</a>
+            <img src="likeview saja.jpg" alt="Layanan Sosial Media TikTok"> <!-- Ganti dengan gambar asli -->
+            <h2>Like/View Tiktok/Instagram</h2>
+            <p class="price">Mulai dari Rp. 2.500,-</p>
+            <p class="note">NOTE : Pilih salah satu Like atau View</p>
+            <a href="order2.html?service=Like/View%Tiktok/Instagram" class="order-button">Pesan Sekarang</a>
         </div>
     </main>
 
@@ -672,13 +612,14 @@
 
     // Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyD4sgRYUhk08Y4oZPR4GXJbSuX1fHjXBtg",
-      authDomain: "akinowedding-73271.firebaseapp.com",
-      projectId: "akinowedding-73271",
-      storageBucket: "akinowedding-73271.appspot.com",
-      messagingSenderId: "307666594440",
-      appId: "1:307666594440:web:e7d3496744464f4c6d0d3d",
-      measurementId: "G-HL4YHXR22B"
+        apiKey: "AIzaSyDNeI0D2fgiwNdHi9Kq9Tu6IhfEP0X7RiE",
+  authDomain: "akinoch-6bdaf.firebaseapp.com",
+  databaseURL: "https://akinoch-6bdaf-default-rtdb.firebaseio.com",
+  projectId: "akinoch-6bdaf",
+  storageBucket: "akinoch-6bdaf.firebasestorage.app",
+  messagingSenderId: "1065243747768",
+  appId: "1:1065243747768:web:61986291cb48a31cb2db4d",
+  measurementId: "G-RFK6RJYYTM"
     };
 
     // Initialize Firebase
