--- a/CarParkingMultiplayer.html
+++ b/CarParkingMultiplayer.html
@@ -721,15 +721,14 @@
 
     // Firebase configuration
     const firebaseConfig = {
-        apiKey: "AIzaSyDNeI0D2fgiwNdHi9Kq9Tu6IhfEP0X7RiE",
+  apiKey: "AIzaSyxxxxxx",
   authDomain: "akinoch-6bdaf.firebaseapp.com",
   databaseURL: "https://akinoch-6bdaf-default-rtdb.firebaseio.com",
   projectId: "akinoch-6bdaf",
-  storageBucket: "akinoch-6bdaf.firebasestorage.app",
+  storageBucket: "akinoch-6bdaf.appspot.com",
   messagingSenderId: "1065243747768",
-  appId: "1:1065243747768:web:61986291cb48a31cb2db4d",
-  measurementId: "G-RFK6RJYYTM"
-    };
+  appId: "1:1065243747768:web:abcd1234efgh5678"
+};
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
