--- a/CarParkingMultiplayer.html
+++ b/CarParkingMultiplayer.html
@@ -11,7 +11,7 @@
 <meta property="og:image:width" content="300">
 <meta property="og:image:height" content="300">
 <meta property="og:url">
-<content="https://akinocpm.my.id/">
+<content="https://akinoch.pages.dev/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AkinoCh</title>
