--- a/SosialMedia.html
+++ b/SosialMedia.html
@@ -518,7 +518,7 @@
             <h2>Like/View Tiktok/Instagram</h2>
             <p class="price">Mulai dari Rp. 2.500,-</p>
             <p class="note">NOTE : Pilih salah satu Like atau View</p>
-            <a href="order2.html?service=Like/View%Tiktok/Instagram" class="order-button">Pesan Sekarang</a>
+            <a href="order2.html?service=Like/View%20Tiktok/Instagram" class="order-button">Pesan Sekarang</a>
         </div>
     </main>
 
