--- a/CarParkingMultiplayer.html
+++ b/CarParkingMultiplayer.html
@@ -11,7 +11,7 @@
 <meta property="og:image:width" content="300">
 <meta property="og:image:height" content="300">
 <meta property="og:url">
-<content="https://akinoch.pages.dev/">
+<content="https://akinocpm.my.id/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AkinoCh</title>
@@ -721,14 +721,15 @@
 
     // Firebase configuration
     const firebaseConfig = {
-  apiKey: "AIzaSyxxxxxx",
+        apiKey: "AIzaSyDNeI0D2fgiwNdHi9Kq9Tu6IhfEP0X7RiE",
   authDomain: "akinoch-6bdaf.firebaseapp.com",
   databaseURL: "https://akinoch-6bdaf-default-rtdb.firebaseio.com",
   projectId: "akinoch-6bdaf",
-  storageBucket: "akinoch-6bdaf.appspot.com",
+  storageBucket: "akinoch-6bdaf.firebasestorage.app",
   messagingSenderId: "1065243747768",
-  appId: "1:1065243747768:web:abcd1234efgh5678"
-};
+  appId: "1:1065243747768:web:61986291cb48a31cb2db4d",
+  measurementId: "G-RFK6RJYYTM"
+    };
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
