--- a/designedit.html
+++ b/designedit.html
@@ -457,6 +457,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="CarParkingMultiplayer.html">Car Parking Multiplayer</a></li>
                         <li><a href="SosialMedia.html">Layanan Sosial Media</a></li>
+                        <li><a href="designedit.html">Design/Edit Foto</a></li>
                     </ul>
                 </li>
                 <li><a href="https://wa.me/6289687163314" target="_blank">Contact</a></li>
