--- a/SosialMedia.html
+++ b/SosialMedia.html
@@ -612,14 +612,14 @@
 
     // Firebase configuration
     const firebaseConfig = {
-        apiKey: "AIzaSyDNeI0D2fgiwNdHi9Kq9Tu6IhfEP0X7RiE",
-  authDomain: "akinoch-6bdaf.firebaseapp.com",
-  databaseURL: "https://akinoch-6bdaf-default-rtdb.firebaseio.com",
-  projectId: "akinoch-6bdaf",
-  storageBucket: "akinoch-6bdaf.firebasestorage.app",
-  messagingSenderId: "1065243747768",
-  appId: "1:1065243747768:web:61986291cb48a31cb2db4d",
-  measurementId: "G-RFK6RJYYTM"
+       const firebaseConfig = {
+      apiKey: "AIzaSyD4sgRYUhk08Y4oZPR4GXJbSuX1fHjXBtg",
+      authDomain: "akinowedding-73271.firebaseapp.com",
+      projectId: "akinowedding-73271",
+      storageBucket: "akinowedding-73271.appspot.com",
+      messagingSenderId: "307666594440",
+      appId: "1:307666594440:web:e7d3496744464f4c6d0d3d",
+      measurementId: "G-HL4YHXR22B"
     };
 
     // Initialize Firebase
