--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:image:width" content="300">
 <meta property="og:image:height" content="300">
 <meta property="og:url">
-<content="https://akinoch.pages.dev/">
+<content="https://akinocpm.my.id/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akino Store - Layanan Jasa Terbaik</title>
@@ -353,6 +353,7 @@
                     <a href="#">Service</a>
                     <ul class="dropdown-menu">
                         <li><a href="CarParkingMultiplayer.html">Car Parking Multiplayer</a></li>
+                        <li><a href="CarParkingMultiplayer2.html">Car Parking Multiplayer 2</a></li>
                         <li><a href="SosialMedia.html">Layanan Sosial Media</a></li>
                         <li><a href="designedit.html">Design/Edit Foto</a></li>
                     </ul>
@@ -384,6 +385,7 @@
         <p>Pilihan Jasa Terbaik untuk Kebutuhan Anda</p>
         <div class="button-container">
             <a href="CarParkingMultiplayer.html" class="button">Car Parking Multiplayer</a>
+            <a href="CarParkingMultiplayer2.html" class="button">Car Parking Multiplayer 2</a>
             <a href="SosialMedia.html" class="button">Layanan Sosial Media</a>
             <a href="designedit.html" class="button">Design/Edit Foto</a>
         </div>
